--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,9 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
+.signup-container{
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+}
